--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
+    "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
+    "gsap": "^3.11.4",
     "react": "17.0.2",
     "react-apexcharts": "^1.4.0",
     "react-calendar": "^3.7.0",
