--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-scripts": "5.0.0",
     "react-select": "^5.7.0",
     "react-table": "^7.7.0",
+    "react-to-print": "^2.14.11",
     "stylis": "^4.1.1",
     "stylis-plugin-rtl": "2.0.2",
     "sweetalert": "^2.1.2",
