--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
     "linkedin-jobs-scraper": "^14.0.8",
     "mongoose": "^6.9.0",
@@ -15,7 +16,8 @@
     "node-cron": "^3.0.2",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
-    "passport-google-oauth2": "^0.2.0"
+    "passport-google-oauth2": "^0.2.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "name": "quiz",
   "version": "1.0.0",
